<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/courtBooking2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/courtBooking"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />


    <TextView
        android:id="@+id/tvBookingDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/bookingDetail"
        android:textColor="@android:color/black"
        android:textSize="@dimen/contentSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courtBooking2" />

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookingDetail"
        app:layout_constraintVertical_bias="0.072" >

        <ImageView
            android:id="@+id/badmintonIcon1"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="BadmintonIcon"
            android:src="@drawable/badminton" />

        <TextView
            android:id="@+id/courtA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/courtA"
            android:textColor="@android:color/black"
            android:textSize="@dimen/courtSize"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookingDetail"
        app:layout_constraintVertical_bias="0.362">

        <ImageView
            android:id="@+id/badmintonIcon2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="BadmintonIcon"
            android:src="@drawable/badminton" />

        <TextView
            android:id="@+id/courtB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/courtB"
            android:textColor="@android:color/black"
            android:textSize="@dimen/courtSize"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookingDetail"
        app:layout_constraintVertical_bias="0.643">

        <ImageView
            android:id="@+id/badmintonIcon3"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="BadmintonIcon"
            android:src="@drawable/badminton" />

        <TextView
            android:id="@+id/courtC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/courtC"
            android:textColor="@android:color/black"
            android:textSize="@dimen/courtSize"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:textSize="@dimen/contentSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvBookingDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>